@@ -74,6 +74,8 @@ tutorials is offered below.<br>
 </li>
 <li><a href=tut/Executable.html>tut/Executable</a> - Creating a Standalone Windows Executable
 </li>
+<li><a href=tut/SurfarrayIntro.html>tut/SurfarrayIntro</a> - Introduction to the surfarray module
+</li>
 
 <hr>
 
